--- a/Visual Studio/2D RPG Negiramen/2D RPG Negiramen.csproj
+++ b/Visual Studio/2D RPG Negiramen/2D RPG Negiramen.csproj
@@ -65,8 +65,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Raw\languages.csv" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+		<PackageReference Include="CsvHelper" Version="30.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Tomlyn" Version="0.16.2" />
 	</ItemGroup>
