--- a/Visual Studio/2D RPG Negiramen/2D RPG Negiramen.csproj
+++ b/Visual Studio/2D RPG Negiramen/2D RPG Negiramen.csproj
@@ -90,6 +90,9 @@
 	  <Compile Update="Views\ConfigurationPage.xaml.cs">
 	    <DependentUpon>ConfigurationPage.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="Views\Login1Page.xaml.cs">
+	    <DependentUpon>Login1Page.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Views\TilesetListPage.xaml.cs">
 	    <DependentUpon>TilesetListPage.xaml</DependentUpon>
 	  </Compile>
@@ -148,7 +151,7 @@
 	  <MauiXaml Update="Views\EditMonsterGroupPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Views\LoginPage1.xaml">
+	  <MauiXaml Update="Views\Login1Page.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\LoginPage2.xaml">
