--- a/Visual Studio/2D RPG Negiramen/2D RPG Negiramen.csproj
+++ b/Visual Studio/2D RPG Negiramen/2D RPG Negiramen.csproj
@@ -93,6 +93,9 @@
 	  <Compile Update="Views\Login1Page.xaml.cs">
 	    <DependentUpon>Login1Page.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="Views\Login2Page.xaml.cs">
+	    <DependentUpon>Login2Page.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Views\TilesetListPage.xaml.cs">
 	    <DependentUpon>TilesetListPage.xaml</DependentUpon>
 	  </Compile>
@@ -154,7 +157,7 @@
 	  <MauiXaml Update="Views\Login1Page.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Views\LoginPage2.xaml">
+	  <MauiXaml Update="Views\Login2Page.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\TilesetListPage.xaml">
