Bug Fix 切抜きカーソル

--- a/Visual Studio/2D RPG Negiramen/2D RPG Negiramen.csproj
+++ b/Visual Studio/2D RPG Negiramen/2D RPG Negiramen.csproj
@@ -66,6 +66,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Models\TileRecordVisualBufferOption.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <None Remove="Resources\Raw\languages.csv" />
 	</ItemGroup>
 
